--- a/Desktop/java/restuarant.html
+++ b/Desktop/java/restuarant.html
@@ -195,7 +195,7 @@
       </p>
     </h6>
     <h3>
-      <a href="./new.html">Details</a>
+      <a href="./restuarant2.html">Details</a>
     </h3>
   </body>
 </html>
