--- a/Desktop/My_Documents/restuarant/restuarant1.html
+++ b/Desktop/My_Documents/restuarant/restuarant1.html
@@ -42,7 +42,7 @@
         <p>
           We are the ones who will give you best food in fast way in your area.
         </p>
-        <a href="/restuarant2.html" class="home-btn">Go to Menu</a>
+        <a href="./restuarant2.html" class="home-btn">Go to Menu</a>
       </div>
       <div class="image">
         <img src="./images/delivery.jpg" alt="" />
